@@ -1,3 +1,10 @@
+
+2008-10-28:
+    Added question for save as if an existing file is overwritten.
+    This was also done for export script and export table.
+    Have previously fixed some serious bugs in the structurefactor part.
+    And also found and corrected bugs in the table export/import function.
+
 2008-09-14:
     Fixed bug in the printing and copying of the plots. Could only print
     or copy the first plot.
